[package]
name = "kinode_lib"
authors = ["KinodeDAO"]
version = "0.9.11"
edition = "2021"
description = "A general-purpose sovereign cloud computing platform"
homepage = "https://kinode.org"
repository = "https://github.com/kinode-dao/kinode"
license = "Apache-2.0"

[dependencies]
lib = { path = "lib" }

[workspace]
members = [
    "lib", "kinode",
    "kinode/packages/app_store/app_store", "kinode/packages/app_store/ft_worker",
    "kinode/packages/app_store/download", "kinode/packages/app_store/install", "kinode/packages/app_store/uninstall", "kinode/packages/app_store/downloads", "kinode/packages/app_store/chain",
    "kinode/packages/chess/chess",
    "kinode/packages/contacts/contacts",
    "kinode/packages/homepage/homepage",
    "kinode/packages/kino_updates/blog", "kinode/packages/kino_updates/globe",
    "kinode/packages/kns_indexer/kns_indexer", "kinode/packages/kns_indexer/get_block", "kinode/packages/kns_indexer/state",
    "kinode/packages/settings/settings",
    "kinode/packages/terminal/terminal",
    "kinode/packages/terminal/alias", "kinode/packages/terminal/cat", "kinode/packages/terminal/echo",
    "kinode/packages/terminal/help", "kinode/packages/terminal/hi", "kinode/packages/terminal/kfetch",
    "kinode/packages/terminal/kill", "kinode/packages/terminal/m", "kinode/packages/terminal/top",
    "kinode/packages/terminal/net_diagnostics", "kinode/packages/terminal/peer", "kinode/packages/terminal/peers",
    "kinode/packages/tester/tester",
    "scripts/build_packages",
]
default-members = ["lib"]
resolver = "2"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
