[package]
name = "kinode_lib"
authors = ["Sybil Technologies AG"]
version = "1.0.0"
edition = "2021"
description = "A general-purpose sovereign cloud computing platform"
homepage = "https://kinode.org"
repository = "https://github.com/kinode-dao/kinode"
license = "Apache-2.0"

[dependencies]
lib = { path = "lib" }

[workspace]
members = [
    "lib", "kinode",
    "kinode/packages/app-store/app-store", "kinode/packages/app-store/ft-worker",
    "kinode/packages/app-store/download", "kinode/packages/app-store/install", "kinode/packages/app-store/uninstall", "kinode/packages/app-store/downloads", "kinode/packages/app-store/chain",
    "kinode/packages/chess/chess",
    "kinode/packages/contacts/contacts",
    "kinode/packages/homepage/homepage",
    "kinode/packages/kns-indexer/kns-indexer", "kinode/packages/kns-indexer/get-block", "kinode/packages/settings/settings", "kinode/packages/kns-indexer/reset",
    "kinode/packages/kns-indexer/node-info", "kinode/packages/kns-indexer/state",
    "kinode/packages/terminal/terminal",
    "kinode/packages/terminal/alias", "kinode/packages/terminal/cat", "kinode/packages/terminal/echo",
    "kinode/packages/terminal/help", "kinode/packages/terminal/hi", "kinode/packages/terminal/kfetch",
    "kinode/packages/terminal/kill", "kinode/packages/terminal/m", "kinode/packages/terminal/top",
    "kinode/packages/terminal/net-diagnostics", "kinode/packages/terminal/peer", "kinode/packages/terminal/peers",
    "kinode/packages/tester/tester",
    "scripts/build-packages",
]
default-members = ["lib"]
resolver = "2"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
