[package]
name = "hyperdrive_lib"
authors = ["Sybil Technologies AG"]
version = "1.1.0"
edition = "2021"
description = "A general-purpose sovereign cloud computing platform"
homepage = "https://hyperware.ai"
repository = "https://github.com/hyperware-ai/hyperdrive"
license = "Apache-2.0"

[dependencies]
lib = { path = "lib" }

[workspace]
members = [
    "lib", "hyperdrive",
    "hyperdrive/packages/app-store/app-store", "hyperdrive/packages/app-store/ft-worker",
    "hyperdrive/packages/app-store/downloads", "hyperdrive/packages/app-store/chain",
    "hyperdrive/packages/app-store/download", "hyperdrive/packages/app-store/install", "hyperdrive/packages/app-store/uninstall", "hyperdrive/packages/app-store/reset-store",
    "hyperdrive/packages/contacts/contacts",
    "hyperdrive/packages/homepage/homepage",
    "hyperdrive/packages/hns-indexer/hns-indexer", "hyperdrive/packages/hns-indexer/get-block", "hyperdrive/packages/settings/settings", "hyperdrive/packages/hns-indexer/reset",
    "hyperdrive/packages/hns-indexer/node-info", "hyperdrive/packages/hns-indexer/state",
    "hyperdrive/packages/terminal/terminal",
    "hyperdrive/packages/terminal/alias", "hyperdrive/packages/terminal/cat", "hyperdrive/packages/terminal/echo",
    "hyperdrive/packages/terminal/help", "hyperdrive/packages/terminal/hi", "hyperdrive/packages/terminal/kfetch",
    "hyperdrive/packages/terminal/kill", "hyperdrive/packages/terminal/m", "hyperdrive/packages/terminal/top",
    "hyperdrive/packages/terminal/net-diagnostics", "hyperdrive/packages/terminal/peer", "hyperdrive/packages/terminal/peers",
    "hyperdrive/packages/tester/tester",
    "scripts/build-packages",
]
default-members = ["lib"]
resolver = "2"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
