[package]
name = "hyperdrive"
authors = ["Sybil Technologies AG"]
version = "1.1.0"
edition = "2021"
description = "A general-purpose sovereign cloud computing platform"
homepage = "https://hyperware.ai"
repository = "https://github.com/hyperware-ai/hyperdrive"
license = "Apache-2.0"

[[bin]]
name = "hyperdrive"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0.71"
sha2 = "0.10.8"

[features]
simulation-mode = []

[dependencies]
aes-gcm = "0.10.3"
alloy = { version = "0.8.1", features = [
    "consensus",
    "contract",
    "json-rpc",
    "network",
    "provider-ws",
    "providers",
    "pubsub",
    "rpc",
    "rpc-client",
    "rpc-client-ws",
    "rpc-types",
    "rpc-types-eth",
    "signers",
    "signer-local",
] }
alloy-primitives = "0.8.15"
alloy-sol-macro = "0.8.15"
alloy-sol-types = "0.8.15"
anyhow = "1.0.71"
argon2 = "0.5.3"
async-trait = "0.1.71"
base64 = "0.22.0"
bincode = "1.3.3"
chrono = "0.4.31"
clap = { version = "4.4", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream", "bracketed-paste"] }
dashmap = "5.5.3"
futures = "0.3"
generic-array = "0.14.7"
hex = "0.4.3"
hmac = "0.12"
http = "1.1.0"
indexmap = "2.4"
jwt = "0.16"
lib = { path = "../lib" }
lazy_static = "1.4.0"
libc = "0.2"
nohash-hasher = "0.2.0"
open = "5.1.4"
public-ip = "0.2.2"
rand = "0.8.4"
regex = "1.11.0"
reqwest = "0.12.4"
ring = "0.17.8"
rmp-serde = "1.1.2"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
route-recognizer = "0.3.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
# snow = { version = "0.9.5", features = ["ring-resolver"] }
# unfortunately need to use forked version for async use and in-place encryption
snow = { git = "https://github.com/dr-frmr/snow", branch = "dr/extract_cipherstates", features = ["ring-resolver"] }
socket2 = "0.5.7"
static_dir = "0.2.0"
tokio = { version = "1.28", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
unicode-segmentation = "1.11"
unicode-width = "0.1.13"
url = "2.4.1"
warp = "0.3.5"
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
zip = "1.1.1"
