[package]
name = "lib"
authors = ["KinodeDAO"]
version = "0.9.3"
edition = "2021"
description = "A general-purpose sovereign cloud computing platform"
homepage = "https://kinode.org"
repository = "https://github.com/kinode-dao/kinode"
license = "Apache-2.0"

[lib]

[build-dependencies]
kit = { git = "https://github.com/kinode-dao/kit", rev = "1458858" }
tokio = "1.28"

[dependencies]
alloy = { git = "https://github.com/kinode-dao/alloy.git", rev = "e672f3e", features = [
    "json-rpc",
    "rpc-types",
    "rpc-types-eth",
] }
lazy_static = "1.4.0"
rand = "0.8.4"
ring = "0.17.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["sync"] }
wasmtime = { version = "19.0.1", features = ["component-model"] }
