[package]
name = "lib"
authors = ["Sybil Technologies AG"]
version = "1.1.0"
edition = "2021"
description = "A general-purpose sovereign cloud computing platform"
homepage = "https://hyperware.ai"
repository = "https://github.com/hyperware-ai/hyperware"
license = "Apache-2.0"

[lib]

[build-dependencies]
anyhow = "1.0.71"
reqwest = "0.12.4"
sha2 = "0.10.8"
tokio = { version = "1.28", features = ["rt-multi-thread"] }

[dependencies]
alloy = { version = "0.8.1", features = [
    "json-rpc",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
] }
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.11.0"
ring = "0.17.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["sync"] }
wasmtime = { version = "27.0.0", features = ["component-model"] }
