[package]
name = "uqbar_process_lib"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.13.0" }
