[package]
name = "apps_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { version = "0.9.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:microkernel-process"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
