[package]
name = "qns_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
wit-bindgen = { version = "0.9.0", default_features = false }
thiserror = "1.0.43"
anyhow = "1.0"
alloy-sol-types = "0.3.2"
hex = "0.4.3"
alloy-primitives = "0.3.3"
bincode = "1.3.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:uq-process"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
