[package]
name = "qns_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
alloy-primitives = "0.3.3"
alloy-sol-types = "0.3.2"
bincode = "1.3.3"
hex = "0.4.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "5390bab780733f1660d14c254ec985df2816bf1d" }
uqbar_process_lib = { path = "../../process_lib" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "uqbar:process"
