[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.13.0" }
uqbar_process_lib = { path = "../../process_lib" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:uq-process"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
