[package]
name = "vector_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uqbar_process_lib = { path = "../../../process_lib" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "5390bab780733f1660d14c254ec985df2816bf1d" }
shinkai_vector_resources = { git = "ssh://git@github.com/uqbar-dao/vector-resources.git", rev = "7bff3b6", default-features = false }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:uq-process"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
