[package]
name = "kns_indexer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
alloy-primitives = "0.6"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "51a8253" }
alloy-sol-types = "0.6"
bincode = "1.3.3"
hex = "0.4.3"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kinode_process_lib = { path = "../../../../process_lib/", features = ["eth"] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "efcc759" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
